fix side bar collapse problem

--- a/src/layouts/responsiveLayout.scss
+++ b/src/layouts/responsiveLayout.scss
@@ -8,6 +8,10 @@
     min-width: 224px !important;
 }
 
+.ant-layout-sider-collapsed {
+    min-width: 72px !important;
+}
+
 .ant-layout-sider-trigger {
     display: none;
 }
